<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_menu_temperature"
            android:title="@string/temperature" />
        <item
            android:id="@+id/nav_power"
            android:icon="@drawable/ic_menu_power"
            android:title="@string/power" />
        <item
            android:id="@+id/nav_lights"
            android:icon="@drawable/ic_menu_lights"
            android:title="@string/lights" />
        <item
            android:id="@+id/nav_windows"
            android:icon="@drawable/ic_menu_blinds"
            android:title="@string/windows" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_alarm"
                android:icon="@drawable/ic_menu_alarm"
                android:title="@string/alarm" />
            <item
                android:id="@+id/nav_setup"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setup" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
