<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentWindows">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windows_home"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_gravity="center">

            <Button
                android:id="@+id/windows_open_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"

                android:text="@string/open" />

            <Button
                android:id="@+id/windows_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"

                android:text="@string/close" />

        </LinearLayout>

    </LinearLayout>




</FrameLayout>